# cookiecutter-cpp

./: .travis.yml  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  pre-commit
{{cookiecutter.repo_name}}/doc/: CMakeLists.txt  Doxyfile.in
{{cookiecutter.repo_name}}/src/: CMakeLists.txt
{{cookiecutter.repo_name}}/test/: CMakeLists.txt  test_{{cookiecutter.project_name}}.cpp
